Use API instead of sys prop lookup
Remove noisy parens
Use final
Use Integer.valueOf()
USe Float.valueOf()
Use Double.valueOf()
Use Short.valueOf()
Use .valueOf()
Use {} to create arrays
Remove extra ';'
Remove trailing whitespace
Remove unused imports
Remove redundant super() call
Use diamonds
Remove redundant cast
Slightly longer line lengths