@@ -44,133 +44,133 @@ public class BitwiseOperatorTest extends JexlTestCase {
 
     @Test
     public void testAndWithTwoNulls() throws Exception {
-        asserter.assertExpression("null & null", new Long(0));
+        asserter.assertExpression("null & null", Long.valueOf(0));
     }
 
     @Test
     public void testAndWithLeftNull() throws Exception {
-        asserter.assertExpression("null & 1", new Long(0));
+        asserter.assertExpression("null & 1", Long.valueOf(0));
     }
 
     @Test
     public void testAndWithRightNull() throws Exception {
-        asserter.assertExpression("1 & null", new Long(0));
+        asserter.assertExpression("1 & null", Long.valueOf(0));
     }
 
     @Test
     public void testAndSimple() throws Exception {
-        asserter.assertExpression("15 & 3", new Long(15 & 3));
+        asserter.assertExpression("15 & 3", Long.valueOf(15 & 3));
     }
 
     @Test
     public void testAndVariableNumberCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(15));
-        asserter.setVariable("y", new Short((short) 7));
-        asserter.assertExpression("x & y", new Long(15 & 7));
+        asserter.setVariable("x", Integer.valueOf(15));
+        asserter.setVariable("y", Short.valueOf((short) 7));
+        asserter.assertExpression("x & y", Long.valueOf(15 & 7));
     }
 
     @Test
     public void testAndVariableStringCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(15));
+        asserter.setVariable("x", Integer.valueOf(15));
         asserter.setVariable("y", "7");
-        asserter.assertExpression("x & y", new Long(15 & 7));
+        asserter.assertExpression("x & y", Long.valueOf(15 & 7));
     }
 
     @Test
     public void testComplementWithNull() throws Exception {
-        asserter.assertExpression("~null", new Long(-1));
+        asserter.assertExpression("~null", Long.valueOf(-1));
     }
 
     @Test
     public void testComplementSimple() throws Exception {
-        asserter.assertExpression("~128", new Long(-129));
+        asserter.assertExpression("~128", Long.valueOf(-129));
     }
 
     @Test
     public void testComplementVariableNumberCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(15));
-        asserter.assertExpression("~x", new Long(~15));
+        asserter.setVariable("x", Integer.valueOf(15));
+        asserter.assertExpression("~x", Long.valueOf(~15));
     }
 
     @Test
     public void testComplementVariableStringCoercion() throws Exception {
         asserter.setVariable("x", "15");
-        asserter.assertExpression("~x", new Long(~15));
+        asserter.assertExpression("~x", Long.valueOf(~15));
     }
 
     @Test
     public void testOrWithTwoNulls() throws Exception {
-        asserter.assertExpression("null | null", new Long(0));
+        asserter.assertExpression("null | null", Long.valueOf(0));
     }
 
     @Test
     public void testOrWithLeftNull() throws Exception {
-        asserter.assertExpression("null | 1", new Long(1));
+        asserter.assertExpression("null | 1", Long.valueOf(1));
     }
 
     @Test
     public void testOrWithRightNull() throws Exception {
-        asserter.assertExpression("1 | null", new Long(1));
+        asserter.assertExpression("1 | null", Long.valueOf(1));
     }
 
     @Test
     public void testOrSimple() throws Exception {
-        asserter.assertExpression("12 | 3", new Long(15));
+        asserter.assertExpression("12 | 3", Long.valueOf(15));
     }
 
     @Test
     public void testOrVariableNumberCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(12));
-        asserter.setVariable("y", new Short((short) 3));
-        asserter.assertExpression("x | y", new Long(15));
+        asserter.setVariable("x", Integer.valueOf(12));
+        asserter.setVariable("y", Short.valueOf((short) 3));
+        asserter.assertExpression("x | y", Long.valueOf(15));
     }
 
     @Test
     public void testOrVariableStringCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(12));
+        asserter.setVariable("x", Integer.valueOf(12));
         asserter.setVariable("y", "3");
-        asserter.assertExpression("x | y", new Long(15));
+        asserter.assertExpression("x | y", Long.valueOf(15));
     }
 
     @Test
     public void testXorWithTwoNulls() throws Exception {
-        asserter.assertExpression("null ^ null", new Long(0));
+        asserter.assertExpression("null ^ null", Long.valueOf(0));
     }
 
     @Test
     public void testXorWithLeftNull() throws Exception {
-        asserter.assertExpression("null ^ 1", new Long(1));
+        asserter.assertExpression("null ^ 1", Long.valueOf(1));
     }
 
     @Test
     public void testXorWithRightNull() throws Exception {
-        asserter.assertExpression("1 ^ null", new Long(1));
+        asserter.assertExpression("1 ^ null", Long.valueOf(1));
     }
 
     @Test
     public void testXorSimple() throws Exception {
-        asserter.assertExpression("1 ^ 3", new Long(1 ^ 3));
+        asserter.assertExpression("1 ^ 3", Long.valueOf(1 ^ 3));
     }
 
     @Test
     public void testXorVariableNumberCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(1));
-        asserter.setVariable("y", new Short((short) 3));
-        asserter.assertExpression("x ^ y", new Long(1 ^ 3));
+        asserter.setVariable("x", Integer.valueOf(1));
+        asserter.setVariable("y", Short.valueOf((short) 3));
+        asserter.assertExpression("x ^ y", Long.valueOf(1 ^ 3));
     }
 
     @Test
     public void testXorVariableStringCoercion() throws Exception {
-        asserter.setVariable("x", new Integer(1));
+        asserter.setVariable("x", Integer.valueOf(1));
         asserter.setVariable("y", "3");
-        asserter.assertExpression("x ^ y", new Long(1 ^ 3));
+        asserter.assertExpression("x ^ y", Long.valueOf(1 ^ 3));
     }
 
     @Test
     public void testParenthesized() throws Exception {
         asserter.assertExpression("(2 | 1) & 3", Long.valueOf(3L));
         asserter.assertExpression("(2 & 1) | 3", Long.valueOf(3L));
-        asserter.assertExpression("~(120 | 42)", new Long(~(120 | 42)));
+        asserter.assertExpression("~(120 | 42)", Long.valueOf(~(120 | 42)));
     }
 
 }
