@@ -55,13 +55,13 @@ public class AsserterTest extends JexlTestCase {
         asserter.setVariable("person", "James");
 
         asserter.assertExpression("person", "James");
-        asserter.assertExpression("size(person)", new Integer(5));
+        asserter.assertExpression("size(person)", Integer.valueOf(5));
 
-        asserter.assertExpression("foo.getCount()", new Integer(5));
-        asserter.assertExpression("foo.count", new Integer(5));
+        asserter.assertExpression("foo.getCount()", Integer.valueOf(5));
+        asserter.assertExpression("foo.count", Integer.valueOf(5));
 
         try {
-            asserter.assertExpression("bar.count", new Integer(5));
+            asserter.assertExpression("bar.count", Integer.valueOf(5));
             Assert.fail("This method should have thrown an assertion exception");
         }
         catch (final AssertionError e) {
